# frontend

./: .env  .env.production  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .vscodeignore  AI_MODEL_FLOW_GUIDE.md  ARCHITECTURE.md  App.tsx  Dockerfile  FINAL_EC2_STREAMING_TEST_RESULTS.md  IMMEDIATE_FIXES_SUMMARY.md  LICENSE  README.md  README_Deploy.md  README_Environment_Setup.md  README_REFACTORING.md  VLLM_STREAMING_TESTS_README.md  app.js  app.json  auth.py  babel.config.js  client_memo.js  database.py  env.d.ts  env_example  eslint.config.mjs  example_requests_responses.py  fix_vllm_connection_and_fallback.py  index.html  index.ts  integration_test_results.json  jest.config.js  main.js  main.py  memoServer.js  models.py  package-lock.json  (+16 more)
app/: _layout.tsx  main.py  schemas.py
app/(tabs)/: _layout.tsx  (+1 more)
constants/: Config.ts
controllers/: auth.js  index.js
data/: api_keys.json  rate_limits.json
db_init/: 01_init_setting_options.sql
docs/: README.md  api_specification_v1.0.md  error_response_schema.md  exception_handlers.md  extension_development_survey.md  logging_monitoring_setup.md  performance_optimization_report.md  security_enhancement_report.md  system_architecture_v2.md  web_interface_tech_stack.md
ios/: Podfile
landing-page/: .env.example  Dockerfile  jest.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js
logs/: diagnostic_20250625_105917.txt
memo/: memo.css  memo.js
models/: db.js  index.js  user.js
routers/: __init__.py  admin_router.py  auth_router.py  history_router.py  settings_router.py  users_router.py
routes/: index.js  middlewares.js  users.js
schemas/: auction.js  good.js  index.js  user.js
scripts/: migrate_to_mongodb.py  mongodb-init.js
services/: api.ts  index.js
src/: app.ts  extension.ts  index.js
stores/: mapStore.ts
templates/: map.html
tests/: __init__.py  test_code_generation.py  test_external_apis.py  test_inference.py  test_redis_service.py  test_security_enhancements.py  test_system_integration.py  test_user_service.py  test_vllm_integration.py  test_vllm_streaming_integration.py
utils/: ErrorBoundary.tsx
venv_production/: pyvenv.cfg
views/: auction.html  error.html  error.pug  good.html  join.html  layout.html  layout.pug  list.html  main.html
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  UI_TEST_GUIDE.md  package-lock.json  package.json  test_hapa.py
(+259 files in other folders)
